tests/fixtures/invalid/pow_str_bool.py
# Cannot call pow() with Str, Bool
x = pow("hello", True)
